20 tests for user service